Refactor dashboard title and styles
Updated the title and adjusted styles for buttons and layout in the dashboard.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ParentSquare IM Dashboard - Evan Tambini</title>
+  <title>ParentSquare IM Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -40,14 +40,13 @@
     .view { display: none; }
     .view.active { display: block; }
 
-    /* My Book Styles */
+    /* Table & Card Styles */
     table { width: 100%; border-collapse: collapse; background: white; border-radius: 8px; overflow: hidden; }
     th { background: var(--ps-green); color: white; padding: 14px; text-align: left; font-size: 12px; text-transform: uppercase; letter-spacing: 0.5px; }
     td { padding: 12px; border-bottom: 1px solid #eee; font-size: 12px; vertical-align: middle; }
     .stage-group-header { background: var(--ps-light-green); font-weight: 700; color: var(--ps-dark-green); padding: 8px 12px; font-size: 11px; text-transform: uppercase; }
     .stage-spacer { height: 15px; background: var(--ps-light-gray); }
 
-    /* Adjustments Display */
     .adj-wrapper { position: relative; }
     .adj-btn { background: #fff; border: 1px solid #ccc; padding: 6px; border-radius: 4px; cursor: pointer; font-size: 11px; width: 100%; text-align: left; display: flex; justify-content: space-between; }
     .adj-display { display: flex; flex-wrap: wrap; gap: 4px; margin-bottom: 4px; font-size: 10px; font-weight: 600; color: var(--ps-blue); }
@@ -55,16 +54,14 @@
     .adj-dropdown { display: none; position: absolute; top: 100%; left: 0; background: white; border: 1px solid #ddd; padding: 10px; z-index: 100; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 220px; border-radius: 4px; }
     .adj-dropdown.active { display: block; }
 
-    /* Territory Styles */
-    .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-    .layout-toggle button { background: white; border: 1px solid #ddd; padding: 6px 12px; cursor: pointer; font-size: 12px; font-weight: 600; }
-    .layout-toggle button.active { background: var(--ps-green); color: white; border-color: var(--ps-green); }
+    .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 15px; }
+    .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; }
+    .btn-action.active { background: var(--ps-green); color: white; border-color: var(--ps-green); }
+
     .im-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 20px; }
     .im-list { display: flex; flex-direction: column; gap: 10px; }
     .im-card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border-left: 5px solid var(--ps-green); position: relative; }
-    .im-card.high-load { border-left-color: var(--ps-red); }
-    .im-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
-    .capacity-container { margin: 15px 0; position: relative; }
+
     .progress-track { height: 12px; background: #eee; border-radius: 6px; position: relative; overflow: hidden; }
     .progress-fill { height: 100%; transition: width 0.6s ease; }
     .marker { position: absolute; top: -5px; width: 2px; height: 22px; background: #bbb; z-index: 2; }
@@ -91,15 +88,15 @@
   </header>
 
   <div class="tabs">
-    <div class="tab active" onclick="switchView('my-book')">My Book of Business</div>
-    <div class="tab" onclick="switchView('territory')">Territory Overview</div>
+    <div id="tab-my" class="tab active" onclick="switchView('my-book')">My Book of Business</div>
+    <div id="tab-territory" class="tab" onclick="switchView('territory')">Territory Overview</div>
     <div class="tab">Total Team Workload</div>
   </div>
 
   <div class="summary">
     <div class="card"><div id="stat-deals" class="value">0</div><div class="label">Active Deals</div></div>
-    <div class="card"><div id="stat-points" class="value">0 <span style="font-size: 14px; font-weight: 400;">(out of <span id="max-pts">0</span>)</span></div><div class="label">Total Points</div></div>
-    <div class="card"><div id="stat-cap" class="value">0%</div><div class="label">Capacity Used (<span id="cur-tier">TBD</span>)</div></div>
+    <div class="card"><div id="stat-points" class="value">0 <span id="max-pts-container" style="font-size: 14px; font-weight: 400;">(out of <span id="max-pts">0</span>)</span></div><div class="label">Total Points</div></div>
+    <div class="card"><div id="stat-cap" class="value">0%</div><div class="label">Capacity Used <span id="tier-context"></span></div></div>
     <div class="card"><div id="stat-risk" class="value">0</div><div class="label">At-Risk Deals</div></div>
   </div>
 
@@ -123,9 +120,10 @@
   <div id="view-territory" class="view">
     <div class="controls">
       <h2 style="color: var(--ps-dark-green); margin: 0;">Territory Load Overview</h2>
-      <div class="layout-toggle">
-        <button id="btn-grid" class="active" onclick="setLayout('grid')">Card View</button>
-        <button id="btn-list" onclick="setLayout('list')">List View</button>
+      <div class="control-group">
+        <button id="sort-toggle" class="btn-action" onclick="toggleTierSort()">Sort: Tier (Desc) ↑↓</button>
+        <button id="btn-grid" class="btn-action active" onclick="setLayout('grid')">Card View</button>
+        <button id="btn-list" class="btn-action" onclick="setLayout('list')">List View</button>
       </div>
     </div>
     <div id="territory-display" class="im-grid"></div>
@@ -135,8 +133,7 @@
 </div>
 
 <script>
-// Logic & Scoring [cite: 66-117, 122-131]
-const CURRENT_IM_TIER = "T3"; 
+const CURRENT_VIEW = { active: 'my-book' };
 const MPC_VALUES = { "T1": 70, "T2": 90, "T3": 120, "T4": 120, "T5": 90 };
 const SIS_PTS = { "PowerSchool": 3, "One Roster SFTP": 3, "Infinite Campus": 2, "Aeries": 2, "Skyward SFTP": 2, "Clever": 2, "RenWeb/FACTS": 1, "Aequitas": 2, "Generic SFTP": 1 };
 const SIZE_PTS = { "Single": 1, "Small": 1, "Medium": 3, "Large": 2, "Enterprise": 2, "Strategic": 4 };
@@ -144,48 +141,84 @@ const HEALTH_PTS = { "green": 0, "yellow": 1, "red": 2 };
 const STAGES = ["Inbound", "Kickoff", "Setup", "Feature Enablement", "Platform Ready", "Monitor", "End of Implementation", "On Hold", "Stalled"];
 const ADJ_OPTIONS = ["Extended Launch", "Proof of Concept", "Pilots", "DSAs/DUAs/DPAs", "DOEs", "New Hire"];
 
+let tierSortDir = 'desc';
+
 let myDeals = [
   { id: 1, stage: "Inbound", name: "Oak Unified", size: "Strategic", sis: "PowerSchool", health: "green", adj: ["Pilots"] },
   { id: 2, stage: "Kickoff", name: "Maple Academy", size: "Medium", sis: "Aeries", health: "yellow", adj: [] },
   { id: 3, stage: "Setup", name: "Pine Charter", size: "Small", sis: "Skyward SFTP", health: "red", adj: ["DSAs/DUAs/DPAs", "DOEs", "Pilots"] },
-  { id: 4, stage: "Feature Enablement", name: "Willow Creek", size: "Large", sis: "Infinite Campus", health: "yellow", adj: ["Extended Launch"] }
+  { id: 4, stage: "Feature Enablement", name: "Willow Creek", size: "Large", sis: "Infinite Campus", health: "yellow", adj: ["Extended Launch"] },
+  { id: 5, stage: "Platform Ready", name: "Birch District", size: "Strategic", sis: "One Roster SFTP", health: "green", adj: [] },
+  { id: 6, stage: "Monitor", name: "Cedar Heights", size: "Medium", sis: "Generic SFTP", health: "green", adj: [] },
+  { id: 7, stage: "Inbound", name: "Elm Schools", size: "Single", sis: "Clever", health: "green", adj: [] },
+  { id: 8, stage: "Setup", name: "Poplar Prep", size: "Medium", sis: "RenWeb/FACTS", health: "red", adj: ["Proof of Concept"] },
+  { id: 9, stage: "Monitor", name: "Linden Academy", size: "Small", sis: "Aeries", health: "green", adj: [] },
+  { id: 10, stage: "Platform Ready", name: "Ash Regional", size: "Large", sis: "PowerSchool", health: "yellow", adj: [] },
+  { id: 11, stage: "Setup", name: "Cypress Unified", size: "Medium", sis: "Skyward SFTP", health: "green", adj: [] },
+  { id: 12, stage: "On Hold", name: "Palm Groves", size: "Large", sis: "Infinite Campus", health: "red", adj: ["DOEs", "Extended Launch"] }
 ];
 
-const territoryIMs = [
-  { name: "Alex R.", tier: "T4", currentPoints: 105, notes: "Managing large district launch." },
-  { name: "Jordan M.", tier: "T2", currentPoints: 65, notes: "" },
-  { name: "Casey S.", tier: "T3", currentPoints: 45, notes: "" }
+let territoryIMs = [
+  { name: "Alex R.", tier: "T4", currentPoints: 105, dealsCount: 12, riskCount: 2, notes: "Managing large district launch." },
+  { name: "Jordan M.", tier: "T2", currentPoints: 65, dealsCount: 8, riskCount: 1, notes: "" },
+  { name: "Casey S.", tier: "T3", currentPoints: 45, dealsCount: 6, riskCount: 0, notes: "Available for new assignments." },
+  { name: "Morgan L.", tier: "T1", currentPoints: 68, dealsCount: 9, riskCount: 3, notes: "Near cap for T1." },
+  { name: "Riley W.", tier: "T2", currentPoints: 88, dealsCount: 10, riskCount: 2, notes: "" },
+  { name: "Skyler P.", tier: "T5", currentPoints: 40, dealsCount: 5, riskCount: 0, notes: "" },
+  { name: "Taylor B.", tier: "T3", currentPoints: 115, dealsCount: 14, riskCount: 4, notes: "Red Zone." },
+  { name: "Quinn J.", tier: "T1", currentPoints: 30, dealsCount: 4, riskCount: 0, notes: "New hire training." }
 ];
 
 function switchView(tabId) {
+  CURRENT_VIEW.active = tabId;
   document.querySelectorAll('.view').forEach(v => v.classList.remove('active'));
   document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
   document.getElementById('view-' + tabId).classList.add('active');
-  event.target.classList.add('active');
+  document.getElementById('tab-' + (tabId === 'my-book' ? 'my' : 'territory')).classList.add('active');
+  updateMetrics();
+  if (tabId === 'territory') renderTerritory();
+  else renderMyBook();
 }
 
 function calculateTotalPoints(deal) {
   return (SIZE_PTS[deal.size] || 0) + (SIS_PTS[deal.sis] || 0) + (HEALTH_PTS[deal.health] || 0) + deal.adj.length;
 }
 
-function updateAdj(dealId, option) {
-  const deal = myDeals.find(d => d.id === dealId);
-  const index = deal.adj.indexOf(option);
-  index > -1 ? deal.adj.splice(index, 1) : deal.adj.push(option);
-  renderDashboard();
+function updateMetrics() {
+  let deals = 0, points = 0, risk = 0, maxPts = 0, capPct = 0;
+
+  if (CURRENT_VIEW.active === 'my-book') {
+    myDeals.forEach(d => {
+      points += calculateTotalPoints(d);
+      if (d.health !== 'green') risk++;
+    });
+    deals = myDeals.length;
+    maxPts = MPC_VALUES["T3"];
+    capPct = Math.round((points / maxPts) * 100);
+    document.getElementById('max-pts-container').style.display = 'inline';
+    document.getElementById('tier-context').innerText = "(T3)";
+  } else {
+    territoryIMs.forEach(im => {
+      deals += im.dealsCount;
+      points += im.currentPoints;
+      risk += im.riskCount;
+      maxPts += MPC_VALUES[im.tier];
+    });
+    capPct = Math.round((points / maxPts) * 100);
+    document.getElementById('max-pts-container').style.display = 'none';
+    document.getElementById('tier-context').innerText = "(Team Avg)";
+  }
+
+  document.getElementById('stat-deals').innerText = deals;
+  document.getElementById('stat-points').firstChild.textContent = points + " ";
+  document.getElementById('max-pts').innerText = maxPts;
+  document.getElementById('stat-risk').innerText = risk;
+  document.getElementById('stat-cap').innerText = capPct + '%';
 }
 
-function setLayout(mode) {
-  const display = document.getElementById('territory-display');
-  display.className = mode === 'grid' ? 'im-grid' : 'im-list';
-  document.getElementById('btn-grid').classList.toggle('active', mode === 'grid');
-  document.getElementById('btn-list').classList.toggle('active', mode === 'list');
-}
-
-function renderDashboard() {
+function renderMyBook() {
   const body = document.getElementById('my-deals-body');
   body.innerHTML = '';
-  let totalPoints = 0, riskCount = 0;
   myDeals.sort((a, b) => STAGES.indexOf(a.stage) - STAGES.indexOf(b.stage));
   let currentStage = "";
 
@@ -196,30 +229,68 @@ function renderDashboard() {
       currentStage = deal.stage;
     }
     const pts = calculateTotalPoints(deal);
-    totalPoints += pts;
-    if (deal.health !== 'green') riskCount++;
-    body.innerHTML += `<tr><td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size} (${SIZE_PTS[deal.size]})</td><td>${deal.sis} (${SIS_PTS[deal.sis]})</td><td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td><td><div class="adj-wrapper"><div class="adj-display ${deal.adj.length > 2 ? 'vertical' : ''}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div><div class="adj-btn" onclick="document.getElementById('adj-menu-${deal.id}').classList.toggle('active')">Manage ▼</div><div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label class="adj-option"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt}</label>`).join('')}</div></div></td><td><strong>${pts}</strong></td></tr>`;
+    body.innerHTML += `<tr>
+      <td>${deal.stage}</td>
+      <td><strong>${deal.name}</strong></td>
+      <td>${deal.size} (${SIZE_PTS[deal.size]})</td>
+      <td>${deal.sis} (${SIS_PTS[deal.sis]})</td>
+      <td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td>
+      <td><div class="adj-wrapper">
+        <div class="adj-display ${deal.adj.length > 2 ? 'vertical' : ''}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div>
+        <div class="adj-btn" onclick="document.getElementById('adj-menu-${deal.id}').classList.toggle('active')">Manage ▼</div>
+        <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label class="adj-option"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt}</label>`).join('')}</div>
+      </div></td>
+      <td><strong>${pts}</strong></td>
+    </tr>`;
+  });
+}
+
+function updateAdj(id, opt) {
+  const d = myDeals.find(x => x.id === id);
+  const idx = d.adj.indexOf(opt);
+  idx > -1 ? d.adj.splice(idx, 1) : d.adj.push(opt);
+  renderMyBook();
+  updateMetrics();
+}
+
+function setLayout(m) {
+  document.getElementById('territory-display').className = m === 'grid' ? 'im-grid' : 'im-list';
+  document.getElementById('btn-grid').classList.toggle('active', m === 'grid');
+  document.getElementById('btn-list').classList.toggle('active', m === 'list');
+}
+
+function toggleTierSort() {
+  tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc';
+  document.getElementById('sort-toggle').innerText = `Sort: Tier (${tierSortDir.toUpperCase()}) ↑↓`;
+  renderTerritory();
+}
+
+function renderTerritory() {
+  const display = document.getElementById('territory-display');
+  const sorted = [...territoryIMs].sort((a, b) => {
+    const tierComp = tierSortDir === 'desc' ? b.tier.localeCompare(a.tier) : a.tier.localeCompare(b.tier);
+    return tierComp !== 0 ? tierComp : a.name.localeCompare(b.name);
   });
 
-  const mpc = MPC_VALUES[CURRENT_IM_TIER];
-  document.getElementById('stat-deals').innerText = myDeals.length;
-  document.getElementById('stat-points').firstChild.textContent = totalPoints + " ";
-  document.getElementById('max-pts').innerText = mpc;
-  document.getElementById('stat-risk').innerText = riskCount;
-  document.getElementById('stat-cap').innerText = Math.round((totalPoints / mpc) * 100) + '%';
-  document.getElementById('cur-tier').innerText = CURRENT_IM_TIER;
-
-  const display = document.getElementById('territory-display');
-  display.innerHTML = territoryIMs.map(im => {
-    const tMpc = MPC_VALUES[im.tier];
-    const tCap = Math.round((im.currentPoints / tMpc) * 100);
-    const color = tCap >= 90 ? 'var(--ps-red)' : (tCap >= 70 ? 'var(--ps-gold)' : 'var(--ps-green)');
-    return `<div class="im-card ${tCap >= 90 ? 'high-load' : ''}"><div class="im-header"><strong>${im.name}</strong><span class="im-tier">${im.tier}</span></div><div>Points: ${im.currentPoints}/${tMpc}</div><div class="capacity-container"><div class="marker-label" style="left:70%">70%</div><div class="marker" style="left:70%"></div><div class="marker-label" style="left:90%">90%</div><div class="marker" style="left:90%"></div><div class="progress-track"><div class="progress-fill" style="width:${tCap}%; background:${color}"></div></div></div><textarea placeholder="Notes...">${im.notes}</textarea></div>`;
+  display.innerHTML = sorted.map(im => {
+    const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
+    const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 70 ? 'var(--ps-gold)' : 'var(--ps-green)');
+    return `<div class="im-card">
+      <div class="im-header"><strong>${im.name}</strong> <span class="pill green" style="font-size:9px;">${im.tier}</span></div>
+      <div style="font-size:11px; margin:5px 0;">Points: ${im.currentPoints}/${mpc}</div>
+      <div class="capacity-container">
+        <div class="marker-label" style="left:70%">70%</div><div class="marker" style="left:70%"></div>
+        <div class="marker-label" style="left:90%">90%</div><div class="marker" style="left:90%"></div>
+        <div class="progress-track"><div class="progress-fill" style="width:${cap}%; background:${color}"></div></div>
+      </div>
+      <textarea placeholder="Notes...">${im.notes}</textarea>
+    </div>`;
   }).join('');
 }
 
-window.onclick = function(event) { if (!event.target.closest('.adj-wrapper')) document.querySelectorAll('.adj-dropdown').forEach(d => d.classList.remove('active')); }
-renderDashboard();
+window.onclick = e => { if (!e.target.closest('.adj-wrapper')) document.querySelectorAll('.adj-dropdown').forEach(d => d.classList.remove('active')); };
+updateMetrics();
+renderMyBook();
 </script>
 </body>
 </html>
