--- a/index.html
+++ b/index.html
@@ -30,37 +30,47 @@
     .tab { padding-bottom: 12px; cursor: pointer; font-weight: 600; color: #666; }
     .tab.active { color: var(--ps-green); border-bottom: 4px solid var(--ps-green); }
 
-    /* Summary Section */
+    /* Summary Section [cite: 137] */
     .summary { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 16px; margin-bottom: 32px; }
     .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border-top: 4px solid var(--ps-green); }
     .card .value { font-size: 28px; font-weight: 700; color: var(--ps-dark-green); }
     .card .label { font-size: 13px; color: #666; margin-top: 4px; font-weight: 600; }
-    .risk-breakdown { font-size: 11px; color: #888; font-weight: 600; }
+    .risk-breakdown { font-size: 11px; color: #888; font-weight: 700; margin-top: 2px; }
 
-    /* Summary Capacity Bar */
+    /* Capacity Health Bar [cite: 132, 134] */
     .summary-cap-bar { height: 6px; background: #eee; border-radius: 3px; margin-top: 8px; overflow: hidden; }
     .summary-cap-fill { height: 100%; transition: width 0.5s; }
 
     .view { display: none; }
     .view.active { display: block; }
 
-    /* Table Styles */
+    /* My Book Styles [cite: 233-239] */
     table { width: 100%; border-collapse: collapse; background: white; border-radius: 8px; overflow: hidden; }
     th { background: var(--ps-green); color: white; padding: 14px; text-align: left; font-size: 12px; text-transform: uppercase; }
-    td { padding: 12px; border-bottom: 1px solid #eee; font-size: 12px; }
+    td { padding: 12px; border-bottom: 1px solid #eee; font-size: 12px; vertical-align: middle; }
     .stage-group-header { background: var(--ps-light-green); font-weight: 700; color: var(--ps-dark-green); padding: 8px 12px; font-size: 11px; text-transform: uppercase; }
     .stage-spacer { height: 15px; background: var(--ps-light-gray); }
 
-    /* Territory Styles */
-    .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-    .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; }
+    /* Adjustments UI [cite: 111-117] */
+    .adj-wrapper { position: relative; }
+    .adj-btn { background: #fff; border: 1px solid #ccc; padding: 6px; border-radius: 4px; cursor: pointer; font-size: 11px; width: 100%; text-align: left; display: flex; justify-content: space-between; }
+    .adj-display { display: flex; flex-wrap: wrap; gap: 4px; margin-bottom: 4px; font-size: 10px; font-weight: 600; color: var(--ps-blue); }
+    .adj-display.vertical { flex-direction: column; gap: 2px; }
+    .adj-dropdown { display: none; position: absolute; top: 100%; left: 0; background: white; border: 1px solid #ddd; padding: 10px; z-index: 100; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 220px; border-radius: 4px; }
+    .adj-dropdown.active { display: block; }
+
+    /* Territory UI Controls */
+    .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 15px; }
+    .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; transition: 0.2s; }
     .btn-action.active { background: var(--ps-green); color: white; border-color: var(--ps-green); }
 
+    /* Section & Layouts */
     .tier-section-header { background: #eef1f5; padding: 10px 20px; margin: 20px 0 10px 0; border-radius: 4px; font-weight: 700; border-left: 5px solid var(--ps-dark-green); }
-    
     .im-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
+    .im-list { display: flex; flex-direction: column; gap: 10px; }
     .im-card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border-left: 5px solid var(--ps-green); }
 
+    /* Capacity Visuals [cite: 119-131] */
     .capacity-container { margin: 25px 0 15px 0; position: relative; }
     .progress-track { height: 14px; background: #eee; border-radius: 7px; position: relative; }
     .progress-fill { height: 100%; transition: width 0.6s ease; border-radius: 7px; }
@@ -137,7 +147,11 @@
   <div id="view-territory" class="view">
     <div class="controls">
       <h2 style="color: var(--ps-dark-green); margin: 0;">Territory Load Overview</h2>
-      <button id="sort-toggle" class="btn-action" onclick="toggleTierSort()">Sort: Tier (DESC) ↑↓</button>
+      <div class="control-group">
+        <button id="sort-toggle" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
+        <button id="btn-grid" class="btn-action active" onclick="setLayout('grid')">Card View</button>
+        <button id="btn-list" class="btn-action" onclick="setLayout('list')">List View</button>
+      </div>
     </div>
     <div id="territory-display"></div>
   </div>
@@ -146,21 +160,22 @@
 </div>
 
 <script>
-const CURRENT_VIEW = { active: 'my-book' };
+const CURRENT_VIEW = { active: 'my-book', layout: 'grid' };
 const MPC_VALUES = { "T1": 70, "T2": 90, "T3": 120, "T4": 120, "T5": 90 };
 const SIS_PTS = { "PowerSchool": 3, "Infinite Campus": 2, "Aeries": 2, "Skyward SFTP": 2, "Clever": 2, "RenWeb/FACTS": 1 };
 const SIZE_PTS = { "Strategic": 4, "Large": 2, "Medium": 3, "Small": 1 };
 const HEALTH_PTS = { "green": 0, "yellow": 1, "red": 2 };
 const STAGES = ["Inbound", "Kickoff", "Setup", "Feature Enablement", "Platform Ready", "Monitor", "End of Implementation", "On Hold", "Stalled"];
+const ADJ_OPTIONS = ["Extended Launch", "Proof of Concept", "Pilots", "DSAs/DUAs/DPAs", "DOEs", "New Hire"];
 
 let tierSortDir = 'desc';
 
-// 12 Reverted Examples
+// My Book: 12 Examples [cite: 39]
 let myDeals = Array.from({length: 12}, (_, i) => ({
-    id: i, stage: STAGES[i % STAGES.length], name: `Customer ${String.fromCharCode(65+i)}`, size: "Medium", sis: "PowerSchool", health: i % 4 === 0 ? "yellow" : (i === 11 ? "red" : "green"), adj: []
+    id: i, stage: STAGES[i % STAGES.length], name: `Customer ${String.fromCharCode(65+i)}`, size: i % 2 === 0 ? "Strategic" : "Medium", sis: "PowerSchool", health: i % 4 === 0 ? "yellow" : (i === 11 ? "red" : "green"), adj: []
 }));
 
-// 8 IM Examples
+// Territory: 8 IM Examples [cite: 40]
 let territoryIMs = [
   { name: "Alex R.", tier: "T4", currentPoints: 105, dealsCount: 12, yellowRisk: 1, redRisk: 1, notes: "" },
   { name: "Jordan M.", tier: "T2", currentPoints: 65, dealsCount: 9, yellowRisk: 1, redRisk: 0, notes: "" },
@@ -182,23 +197,28 @@ function switchView(tabId) {
   tabId === 'territory' ? renderTerritory() : renderMyBook();
 }
 
+function calculateTotalPoints(deal) {
+  return (SIZE_PTS[deal.size] || 0) + (SIS_PTS[deal.sis] || 0) + (HEALTH_PTS[deal.health] || 0) + deal.adj.length;
+}
+
 function updateMetrics() {
   let deals = 0, points = 0, yellow = 0, red = 0, maxPts = 0;
   if (CURRENT_VIEW.active === 'my-book') {
     myDeals.forEach(d => { 
-        points += (SIZE_PTS[d.size] + SIS_PTS[d.sis] + HEALTH_PTS[d.health]);
-        if (d.health === 'yellow') yellow++; if (d.health === 'red') red++;
+        points += calculateTotalPoints(d); 
+        if (d.health === 'yellow') yellow++; if (d.health === 'red') red++; 
     });
     deals = myDeals.length; maxPts = MPC_VALUES["T3"];
     document.getElementById('tier-context').innerText = "(T3)";
   } else {
-    territoryIMs.forEach(im => { deals += im.dealsCount; points += im.currentPoints; yellow += im.yellowRisk; red += im.redRisk; maxPts += MPC_VALUES[im.tier]; });
+    territoryIMs.forEach(im => { 
+        deals += im.dealsCount; points += im.currentPoints; yellow += im.yellowRisk; red += im.redRisk; maxPts += MPC_VALUES[im.tier]; 
+    });
     document.getElementById('tier-context').innerText = "(Team Avg)";
   }
-  
   const capPct = Math.round((points / maxPts) * 100);
   const color = capPct >= 90 ? 'var(--ps-red)' : (capPct >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
-
+  
   document.getElementById('stat-deals').innerText = deals;
   document.getElementById('stat-points').innerText = points;
   document.getElementById('max-pts').innerText = maxPts;
@@ -209,33 +229,59 @@ function updateMetrics() {
   document.getElementById('summary-cap-fill').style.background = color;
 }
 
+function renderMyBook() {
+  const body = document.getElementById('my-deals-body'); body.innerHTML = '';
+  myDeals.sort((a, b) => STAGES.indexOf(a.stage) - STAGES.indexOf(b.stage));
+  let currentStage = "";
+  myDeals.forEach(deal => {
+    if (deal.stage !== currentStage) {
+      if (currentStage !== "") body.innerHTML += `<tr class="stage-spacer"><td colspan="7"></td></tr>`;
+      body.innerHTML += `<tr><td colspan="7" class="stage-group-header">${deal.stage}</td></tr>`;
+      currentStage = deal.stage;
+    }
+    const pts = calculateTotalPoints(deal);
+    body.innerHTML += `<tr>
+      <td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size} (${SIZE_PTS[deal.size]})</td><td>${deal.sis} (${SIS_PTS[deal.sis]})</td><td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td>
+      <td><div class="adj-wrapper"><div class="adj-display ${deal.adj.length > 2 ? 'vertical' : ''}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div>
+      <div class="adj-btn" onclick="document.getElementById('adj-menu-${deal.id}').classList.toggle('active')">Manage ▼</div>
+      <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label class="adj-option" style="display:block; margin-bottom:5px;"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt}</label>`).join('')}</div></div></td>
+      <td><strong>${pts}</strong></td>
+    </tr>`;
+  });
+}
+
+function updateAdj(id, opt) {
+  const d = myDeals.find(x => x.id === id); const idx = d.adj.indexOf(opt);
+  idx > -1 ? d.adj.splice(idx, 1) : d.adj.push(opt); renderMyBook(); updateMetrics();
+}
+
+function setLayout(m) {
+  CURRENT_VIEW.layout = m;
+  document.getElementById('btn-grid').classList.toggle('active', m === 'grid');
+  document.getElementById('btn-list').classList.toggle('active', m === 'list');
+  renderTerritory();
+}
+
 function renderTerritory() {
-  const display = document.getElementById('territory-display');
-  display.innerHTML = '';
+  const display = document.getElementById('territory-display'); display.innerHTML = '';
   const sorted = [...territoryIMs].sort((a, b) => tierSortDir === 'desc' ? b.tier.localeCompare(a.tier) : a.tier.localeCompare(b.tier));
-
-  let currentTier = "";
-  let grid;
-
+  
+  let currentTier = ""; let sectionGroup;
   sorted.forEach(im => {
     if (im.tier !== currentTier) {
       currentTier = im.tier;
-      const header = document.createElement('div');
-      header.className = 'tier-section-header';
-      header.innerText = `Tier ${currentTier.replace('T','')}`;
+      const header = document.createElement('div'); header.className = 'tier-section-header'; header.innerText = `Tier ${currentTier.replace('T','')}`;
       display.appendChild(header);
-      grid = document.createElement('div');
-      grid.className = 'im-grid';
-      display.appendChild(grid);
+      sectionGroup = document.createElement('div');
+      sectionGroup.className = CURRENT_VIEW.layout === 'grid' ? 'im-grid' : 'im-list';
+      display.appendChild(sectionGroup);
     }
 
     const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
     const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
-    
-    const card = document.createElement('div');
-    card.className = 'im-card';
+    const card = document.createElement('div'); card.className = 'im-card';
     card.innerHTML = `
-      <div style="display:flex; justify-content:space-between;"><strong>${im.name}</strong></div>
+      <div style="display:flex; justify-content:space-between;"><strong>${im.name}</strong> <span class="pill green" style="font-size:9px;">${im.tier}</span></div>
       <div style="font-size:11px; margin:5px 0;">📋 Deals: ${im.dealsCount} | ⚠️ Risk: ${im.yellowRisk + im.redRisk} (${im.yellowRisk}Y/${im.redRisk}R)</div>
       <div style="font-size:11px;">Points: <strong>${im.currentPoints}</strong> / ${mpc}</div>
       <div class="capacity-container">
@@ -244,30 +290,12 @@ function renderTerritory() {
         <div class="progress-track"><div class="progress-fill" style="width:${cap}%; background:${color}"></div></div>
       </div>
       <div class="note-container"><textarea placeholder="Notes...">${im.notes}</textarea><button class="btn-save" onclick="this.innerText='Saved!'; setTimeout(()=>this.innerText='Save', 2000)">Save</button></div>`;
-    grid.appendChild(card);
+    sectionGroup.appendChild(card);
   });
 }
 
-function toggleTierSort() {
-  tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc';
-  document.getElementById('sort-toggle').innerText = `Sort: Tier (${tierSortDir.toUpperCase()}) ↑↓`;
-  renderTerritory();
-}
-
-function renderMyBook() {
-  const body = document.getElementById('my-deals-body');
-  body.innerHTML = '';
-  let currentStage = "";
-  myDeals.forEach(deal => {
-    if (deal.stage !== currentStage) {
-      body.innerHTML += `<tr><td colspan="7" class="stage-group-header">${deal.stage}</td></tr>`;
-      currentStage = deal.stage;
-    }
-    const pts = SIZE_PTS[deal.size] + SIS_PTS[deal.sis] + HEALTH_PTS[deal.health];
-    body.innerHTML += `<tr><td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size}</td><td>${deal.sis}</td><td>${deal.health} (pts: ${HEALTH_PTS[deal.health]})</td><td>None</td><td>${pts}</td></tr>`;
-  });
-}
-
+function toggleTierSort() { tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc'; renderTerritory(); }
+window.onclick = e => { if (!e.target.closest('.adj-wrapper')) document.querySelectorAll('.adj-dropdown').forEach(d => d.classList.remove('active')); };
 updateMetrics(); renderMyBook();
 </script>
 </body>
