--- a/index.html
+++ b/index.html
@@ -30,28 +30,27 @@
     .tab { padding-bottom: 12px; cursor: pointer; font-weight: 600; color: #666; }
     .tab.active { color: var(--ps-green); border-bottom: 4px solid var(--ps-green); }
 
-    /* Summary Section [cite: 137] */
+    /* Summary Section */
     .summary { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 16px; margin-bottom: 32px; }
     .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border-top: 4px solid var(--ps-green); }
     .card .value { font-size: 28px; font-weight: 700; color: var(--ps-dark-green); }
     .card .label { font-size: 13px; color: #666; margin-top: 4px; font-weight: 600; }
     .risk-breakdown { font-size: 11px; color: #888; font-weight: 700; margin-top: 2px; }
 
-    /* Capacity Health Bar [cite: 132, 134] */
     .summary-cap-bar { height: 6px; background: #eee; border-radius: 3px; margin-top: 8px; overflow: hidden; }
     .summary-cap-fill { height: 100%; transition: width 0.5s; }
 
     .view { display: none; }
     .view.active { display: block; }
 
-    /* My Book Styles [cite: 233-239] */
+    /* Tables */
     table { width: 100%; border-collapse: collapse; background: white; border-radius: 8px; overflow: hidden; }
     th { background: var(--ps-green); color: white; padding: 14px; text-align: left; font-size: 12px; text-transform: uppercase; }
     td { padding: 12px; border-bottom: 1px solid #eee; font-size: 12px; vertical-align: middle; }
     .stage-group-header { background: var(--ps-light-green); font-weight: 700; color: var(--ps-dark-green); padding: 8px 12px; font-size: 11px; text-transform: uppercase; }
     .stage-spacer { height: 15px; background: var(--ps-light-gray); }
 
-    /* Adjustments UI [cite: 111-117] */
+    /* Adjustments UI */
     .adj-wrapper { position: relative; }
     .adj-btn { background: #fff; border: 1px solid #ccc; padding: 6px; border-radius: 4px; cursor: pointer; font-size: 11px; width: 100%; text-align: left; display: flex; justify-content: space-between; }
     .adj-display { display: flex; flex-wrap: wrap; gap: 4px; margin-bottom: 4px; font-size: 10px; font-weight: 600; color: var(--ps-blue); }
@@ -61,16 +60,21 @@
 
     /* Territory UI Controls */
     .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 15px; }
-    .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; transition: 0.2s; }
+    .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; }
     .btn-action.active { background: var(--ps-green); color: white; border-color: var(--ps-green); }
 
-    /* Section & Layouts */
+    /* Grid Layout */
     .tier-section-header { background: #eef1f5; padding: 10px 20px; margin: 20px 0 10px 0; border-radius: 4px; font-weight: 700; border-left: 5px solid var(--ps-dark-green); }
     .im-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
-    .im-list { display: flex; flex-direction: column; gap: 10px; }
     .im-card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border-left: 5px solid var(--ps-green); }
 
-    /* Capacity Visuals [cite: 119-131] */
+    /* List Layout (Horizontal Data Grid) */
+    .im-list-table { width: 100%; background: white; border-radius: 8px; border-collapse: collapse; overflow: hidden; }
+    .im-list-table th { background: var(--ps-dark-gray); color: white; padding: 10px; font-size: 11px; }
+    .im-list-table td { padding: 10px; border-bottom: 1px solid #eee; }
+    .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; }
+
+    /* Capacity Visuals */
     .capacity-container { margin: 25px 0 15px 0; position: relative; }
     .progress-track { height: 14px; background: #eee; border-radius: 7px; position: relative; }
     .progress-fill { height: 100%; transition: width 0.6s ease; border-radius: 7px; }
@@ -78,6 +82,7 @@
     .marker-label { position: absolute; top: -22px; font-size: 8px; font-weight: 700; color: #777; transform: translateX(-50%); text-align: center; }
     
     .note-container { margin-top: 15px; }
+    .list-note { width: 100%; border: 1px solid #ddd; padding: 4px; border-radius: 4px; font-size: 11px; }
     textarea { width: 100%; height: 60px; border: 1px solid #ddd; border-radius: 4px; font-size: 11px; padding: 8px; resize: none; }
     .btn-save { background: var(--ps-blue); color: white; border: none; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 700; cursor: pointer; float: right; margin-top: 5px; }
 
@@ -108,23 +113,9 @@
 
   <div class="summary">
     <div class="card"><div id="stat-deals" class="value">0</div><div class="label">Active Deals</div></div>
-    
-    <div class="card">
-        <div class="value"><span id="stat-points">0</span> <span style="font-size: 14px; font-weight: 400;">(out of <span id="max-pts">0</span>)</span></div>
-        <div class="label">Total Points</div>
-    </div>
-
-    <div class="card">
-        <div id="stat-cap" class="value">0%</div>
-        <div class="label">Capacity Used <span id="tier-context"></span></div>
-        <div class="summary-cap-bar"><div id="summary-cap-fill" class="summary-cap-fill"></div></div>
-    </div>
-
-    <div class="card">
-      <div id="stat-risk" class="value">0</div>
-      <div class="label">At-Risk Deals</div>
-      <div id="risk-breakdown-text" class="risk-breakdown">0Y / 0R</div>
-    </div>
+    <div class="card"><div class="value"><span id="stat-points">0</span> <span style="font-size: 14px; font-weight: 400;">(out of <span id="max-pts">0</span>)</span></div><div class="label">Total Points</div></div>
+    <div class="card"><div id="stat-cap" class="value">0%</div><div class="label">Capacity Used <span id="tier-context"></span></div><div class="summary-cap-bar"><div id="summary-cap-fill" class="summary-cap-fill"></div></div></div>
+    <div class="card"><div id="stat-risk" class="value">0</div><div class="label">At-Risk Deals</div><div id="risk-breakdown-text" class="risk-breakdown">0Y / 0R</div></div>
   </div>
 
   <div id="view-my-book" class="view active">
@@ -170,12 +161,10 @@ const ADJ_OPTIONS = ["Extended Launch", "Proof of Concept", "Pilots", "DSAs/DUAs
 
 let tierSortDir = 'desc';
 
-// My Book: 12 Examples [cite: 39]
 let myDeals = Array.from({length: 12}, (_, i) => ({
     id: i, stage: STAGES[i % STAGES.length], name: `Customer ${String.fromCharCode(65+i)}`, size: i % 2 === 0 ? "Strategic" : "Medium", sis: "PowerSchool", health: i % 4 === 0 ? "yellow" : (i === 11 ? "red" : "green"), adj: []
 }));
 
-// Territory: 8 IM Examples [cite: 40]
 let territoryIMs = [
   { name: "Alex R.", tier: "T4", currentPoints: 105, dealsCount: 12, yellowRisk: 1, redRisk: 1, notes: "" },
   { name: "Jordan M.", tier: "T2", currentPoints: 65, dealsCount: 9, yellowRisk: 1, redRisk: 0, notes: "" },
@@ -204,21 +193,15 @@ function calculateTotalPoints(deal) {
 function updateMetrics() {
   let deals = 0, points = 0, yellow = 0, red = 0, maxPts = 0;
   if (CURRENT_VIEW.active === 'my-book') {
-    myDeals.forEach(d => { 
-        points += calculateTotalPoints(d); 
-        if (d.health === 'yellow') yellow++; if (d.health === 'red') red++; 
-    });
+    myDeals.forEach(d => { points += calculateTotalPoints(d); if (d.health === 'yellow') yellow++; if (d.health === 'red') red++; });
     deals = myDeals.length; maxPts = MPC_VALUES["T3"];
     document.getElementById('tier-context').innerText = "(T3)";
   } else {
-    territoryIMs.forEach(im => { 
-        deals += im.dealsCount; points += im.currentPoints; yellow += im.yellowRisk; red += im.redRisk; maxPts += MPC_VALUES[im.tier]; 
-    });
+    territoryIMs.forEach(im => { deals += im.dealsCount; points += im.currentPoints; yellow += im.yellowRisk; red += im.redRisk; maxPts += MPC_VALUES[im.tier]; });
     document.getElementById('tier-context').innerText = "(Team Avg)";
   }
   const capPct = Math.round((points / maxPts) * 100);
   const color = capPct >= 90 ? 'var(--ps-red)' : (capPct >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
-  
   document.getElementById('stat-deals').innerText = deals;
   document.getElementById('stat-points').innerText = points;
   document.getElementById('max-pts').innerText = maxPts;
@@ -244,7 +227,7 @@ function renderMyBook() {
       <td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size} (${SIZE_PTS[deal.size]})</td><td>${deal.sis} (${SIS_PTS[deal.sis]})</td><td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td>
       <td><div class="adj-wrapper"><div class="adj-display ${deal.adj.length > 2 ? 'vertical' : ''}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div>
       <div class="adj-btn" onclick="document.getElementById('adj-menu-${deal.id}').classList.toggle('active')">Manage ▼</div>
-      <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label class="adj-option" style="display:block; margin-bottom:5px;"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt}</label>`).join('')}</div></div></td>
+      <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label class="adj-option"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt}</label>`).join('')}</div></div></td>
       <td><strong>${pts}</strong></td>
     </tr>`;
   });
@@ -266,32 +249,51 @@ function renderTerritory() {
   const display = document.getElementById('territory-display'); display.innerHTML = '';
   const sorted = [...territoryIMs].sort((a, b) => tierSortDir === 'desc' ? b.tier.localeCompare(a.tier) : a.tier.localeCompare(b.tier));
   
-  let currentTier = ""; let sectionGroup;
-  sorted.forEach(im => {
-    if (im.tier !== currentTier) {
-      currentTier = im.tier;
-      const header = document.createElement('div'); header.className = 'tier-section-header'; header.innerText = `Tier ${currentTier.replace('T','')}`;
-      display.appendChild(header);
-      sectionGroup = document.createElement('div');
-      sectionGroup.className = CURRENT_VIEW.layout === 'grid' ? 'im-grid' : 'im-list';
-      display.appendChild(sectionGroup);
-    }
+  if (CURRENT_VIEW.layout === 'list') {
+    const table = document.createElement('table'); table.className = 'im-list-table';
+    table.innerHTML = `<thead><tr><th>Tier</th><th>IM Name</th><th>Points</th><th>% Capacity</th><th>Deals</th><th>At-Risk</th><th>Notes</th><th>Action</th></tr></thead><tbody></tbody>`;
+    display.appendChild(table);
+    const tbody = table.querySelector('tbody');
 
-    const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
-    const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
-    const card = document.createElement('div'); card.className = 'im-card';
-    card.innerHTML = `
-      <div style="display:flex; justify-content:space-between;"><strong>${im.name}</strong> <span class="pill green" style="font-size:9px;">${im.tier}</span></div>
-      <div style="font-size:11px; margin:5px 0;">📋 Deals: ${im.dealsCount} | ⚠️ Risk: ${im.yellowRisk + im.redRisk} (${im.yellowRisk}Y/${im.redRisk}R)</div>
-      <div style="font-size:11px;">Points: <strong>${im.currentPoints}</strong> / ${mpc}</div>
-      <div class="capacity-container">
-        <div class="marker-label" style="left:75%">75%<br>(${Math.round(mpc*0.75)})</div><div class="marker" style="left:75%"></div>
-        <div class="marker-label" style="left:90%">90%<br>(${Math.round(mpc*0.9)})</div><div class="marker" style="left:90%"></div>
-        <div class="progress-track"><div class="progress-fill" style="width:${cap}%; background:${color}"></div></div>
-      </div>
-      <div class="note-container"><textarea placeholder="Notes...">${im.notes}</textarea><button class="btn-save" onclick="this.innerText='Saved!'; setTimeout(()=>this.innerText='Save', 2000)">Save</button></div>`;
-    sectionGroup.appendChild(card);
-  });
+    sorted.forEach(im => {
+      const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
+      const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
+      tbody.innerHTML += `<tr>
+        <td style="font-weight:700; color:var(--ps-dark-green)">${im.tier}</td>
+        <td><strong>${im.name}</strong></td>
+        <td>${im.currentPoints} / ${mpc}</td>
+        <td><span class="status-dot" style="background:${color}"></span>${cap}%</td>
+        <td>${im.dealsCount}</td>
+        <td>${im.yellowRisk}Y / ${im.redRisk}R</td>
+        <td><input type="text" class="list-note" value="${im.notes}"></td>
+        <td><button class="btn-save" style="float:none; margin:0;" onclick="this.innerText='...'; setTimeout(()=>this.innerText='Save', 1000)">Save</button></td>
+      </tr>`;
+    });
+  } else {
+    let currentTier = ""; let grid;
+    sorted.forEach(im => {
+      if (im.tier !== currentTier) {
+        currentTier = im.tier;
+        const header = document.createElement('div'); header.className = 'tier-section-header'; header.innerText = `Tier ${currentTier.replace('T','')}`;
+        display.appendChild(header);
+        grid = document.createElement('div'); grid.className = 'im-grid';
+        display.appendChild(grid);
+      }
+      const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
+      const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
+      const card = document.createElement('div'); card.className = 'im-card';
+      card.innerHTML = `<div style="display:flex; justify-content:space-between;"><strong>${im.name}</strong> <span class="pill green" style="font-size:9px;">${im.tier}</span></div>
+        <div style="font-size:11px; margin:5px 0;">📋 Deals: ${im.dealsCount} | ⚠️ Risk: ${im.yellowRisk + im.redRisk} (${im.yellowRisk}Y/${im.redRisk}R)</div>
+        <div style="font-size:11px;">Points: <strong>${im.currentPoints}</strong> / ${mpc}</div>
+        <div class="capacity-container">
+          <div class="marker-label" style="left:75%">75%<br>(${Math.round(mpc*0.75)})</div><div class="marker" style="left:75%"></div>
+          <div class="marker-label" style="left:90%">90%<br>(${Math.round(mpc*0.9)})</div><div class="marker" style="left:90%"></div>
+          <div class="progress-track"><div class="progress-fill" style="width:${cap}%; background:${color}"></div></div>
+        </div>
+        <div class="note-container"><textarea placeholder="Notes...">${im.notes}</textarea><button class="btn-save" onclick="this.innerText='Saved!'; setTimeout(()=>this.innerText='Save', 2000)">Save</button></div>`;
+      grid.appendChild(card);
+    });
+  }
 }
 
 function toggleTierSort() { tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc'; renderTerritory(); }
